# geo-polygonize

./: .gitignore  567.index.js  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  PLAN.md  README.md  check_geo_area.rs  index.html  index.js  llms.txt  package-lock.json  package.json  python_bench_output.txt  rollup.config.mjs  rust_bench_output.txt  tsconfig.json
.github/workflows/: benchmark.yml  deploy_webapp.yml  maintenance.yml  publish.yml  update_llms.yml
benches/: bench_shapely.py  compare_results.py  polygonize_bench.rs  run_comparison.sh  run_wasm_bench.sh
benches/wasm_bench/: Cargo.toml
benches/wasm_bench/src/: lib.rs
docs/: WASM_OPTIMIZATIONS.md
examples/: polygonize.rs
examples/data/: complex_bowtie.geojson  curved_holes.geojson  grid_incomplete.geojson  nested_holes.geojson  overlapping_circles.geojson  touching_polys.geojson
examples/output/: complex_bowtie.geojson  curved_holes.geojson  grid_incomplete.geojson  nested_holes.geojson  overlapping_circles.geojson  touching_polys.geojson
pkg-wrapper/: index.ts  index_slim.ts
scripts/: build_wasm.sh  generate_complex_geojson.py  generate_llms_txt.py  visualize.py
src/: error.rs  lib.rs  polygonizer.rs  polygonizer_tests.rs  tiling.rs  tiling_tests.rs  wasm.rs
src/graph/: mod.rs  planar_graph.rs  tests.rs
src/noding/: snap.rs
src/utils/: mod.rs  parallel.rs  simd.rs
tests/: integration_tests.rs  overlapping_circles_test.rs  robustness.rs
webapp/: index.js  package-lock.json  package.json  style.css  webpack.config.js
