[package]
name = "geo-polygonize"
version = "0.1.0"
edition = "2021"
description = "A native Rust port of the JTS/GEOS polygonization algorithm"
license = "MIT/Apache-2.0"
repository = "https://github.com/graydonpleasants/geo-polygonize"
readme = "README.md"
keywords = ["geo", "polygonize", "polygonization", "geometry", "gis"]
categories = ["science::geo", "algorithms"]

[dependencies]
geo = "0.28"
geo-types = "0.7"
rstar = "0.12"
rayon = "1.10"
log = "0.4"
thiserror = "1.0"
float_next_after = "1.0"

[dev-dependencies]
approx = "0.5"
geojson = "0.24"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "polygonize_bench"
harness = false
