[package]
name = "geo-polygonize"
version = "0.1.0"
edition = "2021"
description = "A native Rust port of the JTS/GEOS polygonization algorithm"
license = "MIT/Apache-2.0"
repository = "https://github.com/graydonpleasants/geo-polygonize"
readme = "README.md"
keywords = ["geo", "polygonize", "polygonization", "geometry", "gis"]
categories = ["science::geo", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
geo = "0.28"
geo-types = "0.7"
rstar = "0.12"
rayon = { version = "1.10", optional = true }
log = "0.4"
thiserror = "1.0"
float_next_after = "1.0"
smallvec = "1.11"
robust = "1.2"
# WASM and GeoJSON dependencies
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
geojson = "0.24"
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "polygonize_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort" # Reduces binary size significantly for Wasm
strip = true    # Removes symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
