[package]
name = "wasm-bench"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
geo-polygonize = { path = "../../" }
geo-types = "0.7"
geo = "0.28"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Performance"] }
js-sys = "0.3"
talc = { version = "4.4", default-features = false, features = ["lock_api"] }
